@@ -16,7 +16,7 @@
  *  any later version.
  *
  *  In addition, as a special exception, the copyright holders give permission 
- *  to link the code of portions of this program with the OpenSSL library under 
+ *  to link the code of portions of this program with the OpenSSL library under
  *  certain conditions as described in each individual source file, and 
  *  distribute linked combinations including the two. You must obey the GNU 
  *  General Public License in all respects for all of the code used other than 
@@ -432,8 +432,10 @@ job_desc_msg_create_from_opts (char *script)
 			} else {
 				debug("loading nodes from hostfile %s",
 				      hostfile);
+				opt.nodelist = xstrdup(nodelist);
 				j->req_nodes = xstrdup(nodelist);
 				free(nodelist);
+				opt.distribution = SLURM_DIST_ARBITRARY;
 			}
 		}
 	}
